src/_assets/firestarter/css/common/_base.scss
/* =======================================================================
Global
========================================================================== */
html {
    box-sizing: border-box;
}

body {
    background: $material-background;
    font: 62.5%/1.618 'Roboto', sans-serif;
    margin: 0 !important;
}

h1, h2, h3, h4, h5, h6,
address {
    word-break: break-word;
    font-weight: bold;
    line-height: 1;
    margin-top: 10px;
    margin-bottom: 30px;

    a {
        font-size: 1em;
    }
}

h1 {
    font-size: 3em;
}

h2 {
    font-size: 2.6em;
}

h3 {
    font-size: 2.4em;
}

h4 {
    font-size: 2.2em;
}

h5 {
    font-size: 2em;
    font-style: italic;
}

h6 {
    font-size: 1.8em;
    font-style: italic;
}

menu, ol, ul {
    font-size: $default-font-size;
    margin-bottom: 20px;
    padding: 0 0 0 40px;

    * {
        font-size: 1em;
    }

    a, p, ol, ul {
        font-size: 1em;
    }
}

ol, ul {
    margin: auto;

    code, kbd, pre, samp {
        font-size: inherit;
    }
}

dl {
    font-size: $default-font-size;
}

table {
    background-color: transparent;
    border: 1px solid $grey;
    border-collapse: collapse;
    border-spacing: 0;
    font-size: $default-font-size;
    margin-bottom: 20px;
    max-width: 100%;
    width: 100%;

    tr:nth-child(even) {
        background: lighten( $grey, 25%);
    }

    th, td {
        padding: 5px 10px;
        vertical-align: top;
    }

    th {
        background: darken( $grey, 10% );
        color: $white;
        text-align: left;
    }

    menu, ol, ul, p, a {
        font-size: 1em;
    }
}

code,
kbd,
pre,
samp,
cite {
    font-size: $default-font-size;

    code,
    kbd,
    pre,
    samp,
    cite {
        font-size: 1em;
    }
}

img {
    display: block;
    height: auto;
    margin: 0 auto 10px;
    max-width: 100%;
    width: 100%;

    @include tablet {
        margin: 0 0 10px;
        width: auto;
    }
}

address,
blockquote {
    font-size: $default-font-size;
    margin: 0 0 10px;
    word-break: break-word;
}

p {
    font-size: $default-font-size;
    word-break: break-word;

    code, kbd, pre, samp, cite {
        font-size: inherit;
    }

    a {
        font-size: 1em;
    }
}

a {
    @include transition( all, 0.5s, $easeOutExpo );

    color: $red;
    font-size: $default-font-size;
    margin-bottom: 10px;
    text-decoration: none;
}

hr {
    margin: 40px 0;
}

button {
    &:focus {
        outline: 0;
    }
}

.intro {
    p {
        font-size: 1.8em;
        font-weight: bold;
    }
}

::-ms-clear {
    height: 22px;
    width: 22px;
}

::-webkit-input-placeholder { /* Chrome */
    color: #a9a9a9;
}

:-ms-input-placeholder { /* IE 10+ */
    color: #a9a9a9;
}

::-moz-placeholder { /* Firefox 19+ */
    color: #a9a9a9;
    opacity: 1;
}

:-moz-placeholder { /* Firefox 4 - 18 */
    color: #a9a9a9;
    opacity: 1;
}

::-webkit-scrollbar {
    height: 5px;
    width: 5px;
}

::-webkit-scrollbar-thumb {
    background: rgba(0, 0, 0, 0.26);
}

::-webkit-scrollbar-corner {
    background: 0;
}


.btn {
    @include transition( all, 0.5s, $easeOutExpo );

    background: $red;
    border: 0;
    border-radius: 3px;
    color: $white;
    font-size: $default-font-size;
    overflow: hidden;
    padding: 10px;
    position: relative;
    width: 100%;
    width: auto;

    &:hover {
        background: darken( $red, 10%);
    }

    &.disabled {
        background: lighten( $grey, 30%);
        color: lighten( $grey, 10%);
        cursor: not-allowed;
    }

    svg.ripple circle {
        fill: $white;
    }
}

svg.ripple {
    left: 0;
    position: absolute;
    top: 0;
    z-index: 1;

    circle {
        fill: $white;
        opacity: 0;
    }
}



/* =======================================================================
Layout
========================================================================== */
#main {
    margin-top: 45px;
    position: relative;

    @include desktop {
        margin-top: 90px;
    }
}

.backstretch {
    background-color: $grey;
    background-size: cover;
    background-repeat: no-repeat;
    position: relative;
}

.breadcrumbs {
    height: 100%;
    margin: auto;
    margin-bottom: 20px;
    max-width: 960px;
    padding: 0 $gutter;
    position: relative;
    width: 100%;

    li {
        display: inline-block;
        font-size: 1em;

        a {
            text-decoration: none;

            &:hover {
                text-decoration: underline;
            }
        }

        &:after {
            @extend %icomoon;

            content: "\e902";
            font-size: 1.2em;
            margin: 0 10px;
            position: relative;
            top: 3px;
        }

        &:last-child {
            color: $red;
            font-weight: bold;

            &:after {
                content: "";
            }
        }
    }
}

.table-wrapper {
    border: 1px solid $grey;
    font-size: 1em !important;
    margin: 20px 0;
    overflow-x: auto;
    overflow-y: hidden;
    position: relative;

    &.no-scrollbar {
        border: 0;
        overflow-x: visible;
        overflow-y: visible;
    }

    table {
        margin-bottom: 0;

        th,
        td {
            min-width: 75px;
        }
    }
}

.btn-print-table {
    @include transition( position, 0.5s, $easeOutExpo );
    @extend .btn;

    font-size: $default-font-size;
    max-width: 200px;
    padding: 10px;
    width: 100%;

    @include desktop {
        display: none;
    }
}

